--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2,6 +2,31 @@
 @import "@/assets/css/lib/tailwind.css";
 @import "@nuxt/ui";
 
+:root {
+  --ui-bg: #050a14;
+}
+
 button {
   cursor: pointer;
+}
+
+.container {
+  max-width: 1440px;
+  margin-inline: auto;
+  padding-inline: 10px;
+}
+
+/* Scrollbar styling */
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.2);
 }
